fixed appearance, pickup finished, needs to be tested and cleaned up

--- a/JSON/appearance.JSON
+++ b/JSON/appearance.JSON
@@ -333,7 +333,71 @@
         "She leans over you as she fills both flutes, offering you a view down her blouse.",
         "She kneels down to fill the flutes, and her skirt rides up giving you a nice view.",
         "She sensually strokes her hand up and down the bottle before she picks it up and fills the flutes.",
-        "She pours out two flutes worth and brings yours all the way up to your lips - her face within an inch of yours."]
+        "She pours out two flutes worth and brings yours all the way up to your lips - her face within an inch of yours."],
+      "peeprivate": [
+        "You can imagine her panic in the bathroom as she sees the toilet and feels it starting to come out before she even has a chance to peel down her skirt",
+        "You visualize her grabbing her crotch through her skirt the moment she sees the toilet and struggling to control it long enough to get her skirt off",
+        "You can imagine her finally relaxing over the toilet, pee pouring from her crotch for nearly a full minute.",
+        "You can imagine her in front of the toilet, too desperate to even close the door before emptying her overfilled bladder",
+        "You can only guess at her frenzied antics in front of the toilet as her struggling pee hole is finally allowed to relax and her full bladder empties into the toilet.",
+        "You imagine her struggles to control herself just long enough to get her clothing out of the way before she empties her overtaxed bladder into the toilet."],
+      "peeprivate2": [
+        "You are left to imagine the her finding a stall, carefully closing the door and hiking up her skirt to use the toilet in private.",
+        "You are left alone with only your imagination of her releasing her pent up pee into the toilet.",
+        "You can only speculate what she's doing in there - Is there a line?  Does she consider the sink?  The floor drain?",
+        "You can only fantasize about her final relief on the toilet - the pee pouring from her naked crotch",
+        "You can just imagine the relief she feels as she pees in the privacy of the toilet.",
+        "You can barely suppress the impulse to hold on to her - to follow her to the toilet where she quickly sits and empties her bladder."],
+      "dryquote": [
+        "She daintily flaps her skirt a couple of times to air out her soaking crotch.",
+        "She wipes her crotch with her hand, flinging the fragrant drops to the ground.",
+        "She presses her skirt to her pussy and drops of pee soak into the fabric.",
+        "She fans her crotch with her hand, as if to dry out her soaked pubes.",
+        "She wipes at her thighs with the back of her hand and then dries it off on the fabric of her skirt.",
+        "She feels the back of her skirt for a wet patch.  It doesn't seem like there's much damage."],
+      "peeshotquote" : "She hurriedly grabs the shot glass and quickly lifts her skirt, pulling aside her {0} panties as she holds the edge of the glass against her pink pussy lips.",
+      "peeshotquotebare" : "She grabs the shot glass and quickly lifts her skirt, holding the edge of the glass against her bare pussy.",
+      "peeskirtquote" : "She sets the vase on the floor and lifts up her skirt, quickly pulling her {0} panties down around her ankles.  She carefully squats above the vase, its edge barely touching her pink pussy lips." ,
+      "peeskirtquotebare" : "She sets the vase on the floor and lifts up her skirt, revealing her bare crotch.  She carefully squats above the vase, its edge barely touching her pink pussy lips.",
+      "peetowelquote" : " hurriedly lifts up her skirt, jamming the paper towels between her legs and pressing it into the crotch of her {0} panties.",
+      "peetowelquotebare" : " hurriedly lifts up her skirt, jamming the roll of paper towels directly onto her bare pussy lips.",
+      "peeoutsidequote" : "She steps gingerly out of the car lifts up her skirt, quickly pulling her {0} panties down around her ankles.  She carefully squats, looking around to make sure that nobody is watching.",
+      "peeoutsidequotebare" : "She hops quickly out of the car and lifts up her skirt, revealing her bare crotch.  She carefully squats, quickly glancing around to make sure she's really not being watched.",
+      "peeoutsidebquote" : "She lifts up her skirt, pulling her {0} panties down around her ankles.  She carefully squats, looking around to make sure that nobody is watching.",
+      "peeoutsidebquotebare" : "She lifts up her skirt, revealing her bare crotch.  She carefully squats, quickly glancing around to make sure she's really not being watched.",
+      "wetherselfquote" : "She lifts her skirt and slowly peels her soaked {0} panties down her dripping legs, holding them daintily between her thumb and forefinger.",
+      "firstmtgquote" : " greets you at the door.  She's wearing a short black skirt and tight white blouse.",
+      "firstmtgtightquote" : "The skirt is so tight you can see the outlines of her {0} panties.",
+      "firstmtgtightquotebare" : "You don't see any pantylines, despite the tight skirt.",
+      "soakedseatquote" : "She pulls her skirt out of the way and gingerly sits on the soaked passenger seat.",
+      "peeprepquote" : "She hikes her skirt up and pulls her panties down around her ankles.",
+      "peeprepquotebare" : "She hikes her skirt up and you can just barely see her bare pussy in the dim light.",
+      "undressquote" : " strips off her top and skirt, then shyly unclasps her bra, revealing her breasts briefly before turning her back to you.",
+      "undressquteemer" : " quickly peels off her top and throws it aside before grabbing her crotch through the fabric of her skirt.  She bends over for a bit, and then gingerly pulls the skirt down, her legs held tightly together.",
+      "ptogetherquote" : " rips down her skirt and {0} panties, and is pissing like a racehorse before she even fully sits down on the seat.",
+      "ptogetherquotebare" : " yanks up her skirt, and is pissing like a racehorse before she even fully sits down on the seat.",
+      "ptogetheroutquote": "Her bladder can't be ignored, and she pulls her panties down around her ankles, quickly sqatting and lifting up her skirt.",
+      "ptogetheroutquotebare" : "Her bladder can't be ignored, and she squats, lifting up her skirt to reveal her bare pussy.",
+      "finishtogetheroutquote" : "She gets up and re-adjusts her panties over her still-damp crotch, letting her skirt fall loosely back into place.",
+      "finsihtogetheroutquotebare" : "She gets up and smoothes her skirt to hide her still-damp crotch.",
+      "ptogetherdumpquote" : "You reach quickly under her skirt, running your hand up her hot and sweaty thighs to the damp gusset of her {0} panties.",
+      "ptogetherdumpquotebare" : "You reach quickly under her skirt, running your hand up her hot and sweaty thighs to reach the soft, moist flesh of her cunt.",
+      "finishtogetherdumpquote" : "A huge puddle has formed as she squeezes off the last drops, and you wipe her pussy with your finger before smoothing her panties back into place and tugging her skirt into position.",
+      "finishtogetherdumpquotebare" : "A huge puddle has formed as she squeezes off the last drops, and you wipe her pussy with your finger before letting her skirt fall back down.",
+      "sextakeoffskirt" : "Take off her skirt",
+      "sextakeoffblouse" : "Take off her blouse",
+      "sextouchthighquote" : "You slip your hand under her skirt and slide it up her inner thighs.",
+      "sextouchassquote" : "You massage her ass through the thin fabric of her skirt.",
+      "sextouchpussyquote" : "You reach under her skirt and massage her pussy through the thin fabric of her panties.",
+      "sexkissthighquote" : "You lay your head in her lap and rub your cheek on her inner thigh through the thin fabric of her skirt.",
+      "sexkisspussyquote" : "You bury your face in her lap in a vain attempt to stretch her skirt, but instead you just put pressure on her bladder.",
+      "sextoskirtquoteemer" : "The bulge of her overfull bladder is stretching out her skirt on top and making the zipper difficult to operate.",
+      "sextoskirtquote" : "You unzip and tug down her skirt to reveal her {0} panties beneath.",
+      "sextoskirtquotebare" : "You unzip and pull down her skirt like you were unwrapping a present.  Beneath it you find her curly pubes and nothing else.",
+      "sextopantiesquote" : "You reach up under her skirt and try to tug her panties down, but they seem to be stuck.",
+      "swimstripquote" : " is already peeling off her blouse and skirt.",
+      "swimstripquotebare" : "She hesitates a second and then removes her lacy bra.  She stands completely naked, but it's difficult to see much in the warm darkness.",
+      "swimstripquotepanties" : "She hesitates a second and then removes her lacy bra, leaving her {0} panties on."
     }
   }
 }
