Created a rough outline how items that can be used to pee in can be used, and created an example with champagne glass

--- a/JSON/appearance.JSON
+++ b/JSON/appearance.JSON
@@ -69,42 +69,7 @@
           "You stare at her lap, imagining beautiful red curls hiding a soft and wet cunt sitting at the top of her smooth, firm thighs.  You quickly wipe the stupid grin off your face and pay attention.",
           "You concentrate on her long legs as they disappear up under her skirt, and imagine running your hand up between her smooth tanned thighs and feeling the warm wetness.  You feel dizzy and snap back to reality.",
           "You stare at her perfect white teeth behind full lips and briefly imagine them wrapped around your dick before trying to re-mesh with reality.",
-          "You look longingly at her short skirt, imagining your hands grasping her waist, pulling at the zipper and peeling it off her while running across her marvelous behind, but catch yourself staring too long and force yourself to reconnect with the real world.  You quickly suppress the thought and try to pay attention."],
-        "peeprivate":[
-          "You can imagine her panic in the bathroom as she sees the toilet and feels it starting to come out before she even has a chance to peel down her skirt",
-          "You visualize her grabbing her crotch through her skirt the moment she sees the toilet and struggling to control it long enough to get her skirt off",
-          "You can imagine her finally relaxing over the toilet, pee pouring from her crotch for nearly a full minute.",
-          "You can imagine her in front of the toilet, too desperate to even close the door before emptying her overfilled bladder",
-          "You can only guess at her frenzied antics in front of the toilet as her struggling pee hole is finally allowed to relax and her full bladder empties into the toilet.", "You imagine her struggles to control herself just long enough to get her clothing out of the way before she empties her overtaxed bladder into the toilet."],
-        "peeprivate2": [
-          "You are left to imagine the her finding a stall, carefully closing the door and hiking up her skirt to use the toilet in private.",
-          "You are left alone with only your imagination of her releasing her pent up pee into the toilet.",
-          "You can only speculate what she's doing in there - Is there a line?  Does she consider the sink?  The floor drain?",
-          "You can only fantasize about her final relief on the toilet - the pee pouring from her naked crotch",
-          "You can just imagine the relief she feels as she pees in the privacy of the toilet.",
-          "You can barely suppress the impulse to hold on to her - to follow her to the toilet where she quickly sits and empties her bladder."],
-        "dryquote": [
-          "She daintily flaps her skirt a couple of times to air out her soaking crotch.",
-          "She wipes her crotch with her hand, flinging the fragrant drops to the ground.",
-          "She presses her skirt to her pussy and drops of pee soak into the fabric.",
-          "She fans her crotch with her hand, as if to dry out her soaked pubes.",
-          "She wipes at her thighs with the back of her hand and then dries it off on the fabric of her skirt.",
-          "She feels the back of her skirt for a wet patch.  It doesn't seem like there's much damage."],
-        "peeshotquote": "She hurriedly grabs the shot glass and quickly lifts her skirt, pulling aside her {0} panties as she holds the edge of the glass against her pink pussy lips.",
-        "peeshotbare": "She grabs the shot glass and quickly lifts her skirt, holding the edge of the glass against her bare pussy.",
-        "peeskirtquote": "She sets the vase on the floor and lifts up her skirt, quickly pulling her {0} panties down around her ankles.  She carefully squats above the vase, its edge barely touching her pink pussy lips.",
-        "peeskirtquotebare": "She sets the vase on the floor and lifts up her skirt, revealing her bare crotch.  She carefully squats above the vase, its edge barely touching her pink pussy lips.",
-        "peetowelquote": " hurriedly lifts up her skirt, jamming the paper towels between her legs and pressing it into the crotch of her {0} panties.",
-        "peetowelquotebare": " hurriedly lifts up her skirt, jamming the roll of paper towels directly onto her bare pussy lips.",
-        "peeoutsidequote": "She steps gingerly out of the car lifts up her skirt, quickly pulling her {0} panties down around her ankles.  She carefully squats, looking around to make sure that nobody is watching.",
-        "peeoutsidequptebare": "She hops quickly out of the car and lifts up her skirt, revealing her bare crotch.  She carefully squats, quickly glancing around to make sure she's really not being watched.",
-        "peeoutsidebquote": "She lifts up her skirt, pulling her {0} panties down around her ankles.  She carefully squats, looking around to make sure that nobody is watching.",
-        "peeoutsidebquotebare": "She lifts up her skirt, revealing her bare crotch.  She carefully squats, quickly glancing around to make sure she's really not being watched.",
-        "wetherselfquote": "She lifts her skirt and slowly peels her soaked {0} panties down her dripping legs, holding them daintily between her thumb and forefinger.",
-        "firstmtgquote": " greets you at the door.  She's wearing a short black skirt and tight white blouse.",
-        "firstmtgtightquote": "The skirt is so tight you can see the outlines of her {0} panties.",
-        "firstmtgtightquotebare": "You don't see any pantylines, despite the tight skirt.",
-        "soakedseatquote": "She pulls her skirt out of the way and gingerly sits on the soaked passenger seat."
+          "You look longingly at her short skirt, imagining your hands grasping her waist, pulling at the zipper and peeling it off her while running across her marvelous behind, but catch yourself staring too long and force yourself to reconnect with the real world.  You quickly suppress the thought and try to pay attention."]
       }
     }
 
@@ -216,10 +181,12 @@
         "She feels her butt and the back of her jeans for a wet patch.  They're soaked, but it's difficult to tell."],
       "peeshotquote": "She hurriedly grabs the shot glass and quickly rips down her tight jeans and {0} panties as she holds the edge of the glass against her pink pussy lips.",
       "peeshotquotebare": "She grabs the shot glass and quickly rips down her tight jeans, holding the edge of the glass against her suddenly bare pussy.",
-      "peeskirtquote": "She sets the vase on the floor and rips down her tight jeans, quickly pulling her {0} panties down around her ankles as well.  She carefully squats above the vase, its edge barely touching her pink pussy lips.",
-      "peeskirtquotebare": "She sets the vase on the floor and rips down her tight jeans, revealing her bare crotch.  She carefully squats above the vase, its edge barely touching her pink pussy lips.",
+      "peevasequote": "She sets the vase on the floor and rips down her tight jeans, quickly pulling her {0} panties down around her ankles as well.  She carefully squats above the vase, its edge barely touching her pink pussy lips.",
+      "peevasequotebare": "She sets the vase on the floor and rips down her tight jeans, revealing her bare crotch.  She carefully squats above the vase, its edge barely touching her pink pussy lips.",
       "peetowelquote": " hurriedly pulls down her jeans and {0} panties in a single motion, jamming the paper towels between her legs and pressing them into her struggling crotch.",
       "peetowelquotebare": " hurriedly pulls down her tight jeans, jamming the roll of paper towels directly onto her bare pussy lips.",
+      "peechampquote": "Grabbing the champagne glass she quickly rips down her tight jeans and {0} panties as she presses the mouth of the glass against her pussy lips.",
+      "peechampquotebare": "She grabs the champagne glass and and quickly rips down her tight jeans, holding the edge of the glass against her bare pussy.",
       "peeoutsidequote": "She steps gingerly out of the car drops her tight jeans and {0} panties down around her ankles.  She carefully squats, looking around to make sure that nobody is watching.",
       "peeoutsidequotebare": "She hops quickly out of the car and drops her tight jeans, revealing her bare crotch.  She carefully squats, quickly glancing around to make sure she's really not being watched.",
       "peeoutsidebquote": "She pulls down her jeans and {0} panties around her ankles.  She carefully squats, looking around to make sure that nobody is watching.",
@@ -357,10 +324,12 @@
         "She feels the back of her skirt for a wet patch.  It doesn't seem like there's much damage."],
       "peeshotquote" : "She hurriedly grabs the shot glass and quickly lifts her skirt, pulling aside her {0} panties as she holds the edge of the glass against her pink pussy lips.",
       "peeshotquotebare" : "She grabs the shot glass and quickly lifts her skirt, holding the edge of the glass against her bare pussy.",
-      "peeskirtquote" : "She sets the vase on the floor and lifts up her skirt, quickly pulling her {0} panties down around her ankles.  She carefully squats above the vase, its edge barely touching her pink pussy lips." ,
-      "peeskirtquotebare" : "She sets the vase on the floor and lifts up her skirt, revealing her bare crotch.  She carefully squats above the vase, its edge barely touching her pink pussy lips.",
+      "peevasequote" : "She sets the vase on the floor and lifts up her skirt, quickly pulling her {0} panties down around her ankles.  She carefully squats above the vase, its edge barely touching her pink pussy lips." ,
+      "peevasequotebare" : "She sets the vase on the floor and lifts up her skirt, revealing her bare crotch.  She carefully squats above the vase, its edge barely touching her pink pussy lips.",
       "peetowelquote" : " hurriedly lifts up her skirt, jamming the paper towels between her legs and pressing it into the crotch of her {0} panties.",
       "peetowelquotebare" : " hurriedly lifts up her skirt, jamming the roll of paper towels directly onto her bare pussy lips.",
+      "peechampquote": "Grabbing the champagne glass, she lifts her skirt, pulling aside her {0} panties as she presses the mouth of the glass against her pussy lips",
+      "peechampquotebare": "She grabs the champagne glass and lifts her skirt. Pressing the glass against her bare pussy.",
       "peeoutsidequote" : "She steps gingerly out of the car lifts up her skirt, quickly pulling her {0} panties down around her ankles.  She carefully squats, looking around to make sure that nobody is watching.",
       "peeoutsidequotebare" : "She hops quickly out of the car and lifts up her skirt, revealing her bare crotch.  She carefully squats, quickly glancing around to make sure she's really not being watched.",
       "peeoutsidebquote" : "She lifts up her skirt, pulling her {0} panties down around her ankles.  She carefully squats, looking around to make sure that nobody is watching.",
