You can now also ask her to pee into the paper towels.

--- a/JSON/appearance.JSON
+++ b/JSON/appearance.JSON
@@ -183,8 +183,8 @@
       "peeshotquotebare": "She grabs the shot glass and quickly rips down her tight jeans, holding the edge of the glass against her suddenly bare pussy.",
       "peevasequote": "She sets the vase on the floor and rips down her tight jeans, quickly pulling her {0} panties down around her ankles as well.  She carefully squats above the vase, its edge barely touching her pink pussy lips.",
       "peevasequotebare": "She sets the vase on the floor and rips down her tight jeans, revealing her bare crotch.  She carefully squats above the vase, its edge barely touching her pink pussy lips.",
-      "peetowelquote": " hurriedly pulls down her jeans and {0} panties in a single motion, jamming the paper towels between her legs and pressing them into her struggling crotch.",
-      "peetowelquotebare": " hurriedly pulls down her tight jeans, jamming the roll of paper towels directly onto her bare pussy lips.",
+      "peetowelquote": "She hurriedly pulls down her jeans and {0} panties in a single motion, jamming the paper towels between her legs and pressing them into her struggling crotch.",
+      "peetowelquotebare": "She hurriedly pulls down her tight jeans, jamming the roll of paper towels directly onto her bare pussy lips.",
       "peechampquote": "Grabbing the champagne glass she quickly rips down her tight jeans and {0} panties as she presses the mouth of the glass against her pussy lips.",
       "peechampquotebare": "She grabs the champagne glass and and quickly rips down her tight jeans, holding the edge of the glass against her bare pussy.",
       "peeoutsidequote": "She steps gingerly out of the car drops her tight jeans and {0} panties down around her ankles.  She carefully squats, looking around to make sure that nobody is watching.",
