Finished backpack. Not perfectly tested but it should work.

--- a/JSON/appearance.JSON
+++ b/JSON/appearance.JSON
@@ -276,7 +276,7 @@
         "She drops her shorts without even unzipping them and quickly wraps the grass skirt around her waist.  She grabs a handfull of the grass in a fist and jams it into her crotch for a moment before the coconuts replace her halter top and she stands there swaying back and forth."],
       "fillchampok": [
         "She carefully fills the champagne flutes, pressing her body up to yours.",
-        "She fills your flute, and then hers, catching a drip on her finger and sensously licking it off.",
+        "She fills your flute, and then hers, catching a drip on her finger and sensuously licking it off.",
         "She leans over you as she fills both flutes, offering you a view down her blouse.",
         "She kneels down to fill the flutes, and her skirt rides up giving you a nice view.",
         "She sensually strokes her hand up and down the bottle before she picks it up and fills the flutes.",
