Worked on refactoring the FuckHer scenes.

--- a/JSON/appearance.JSON
+++ b/JSON/appearance.JSON
@@ -203,10 +203,15 @@
       "finishtogetherdumpquote": "A huge puddle has formed as she squeezes off the last drops, and you wipe her pussy with your finger before smoothing her panties back into place and helping squeeze her back into the skin-tight blue jeans.",
       "finishtogetherdumpquotebare": "A huge puddle has formed as she squeezes off the last drops, and you wipe her pussy with your finger before helping to squeeze her back into the skin-tight blue jeans.",
       "sextakeoffskirt": "Take off her jeans",
-      "sextakeoffblouse": "Take off her t-shirt",
-      "sextouchthighquote": "You slip your hand between her legs and slide it up her inner thighs, feeling the smooth fabric of her jeans.",
-      "sextouchassquote": "You massage her ass through the thin fabric of her tight jeans.",
-      "sextouchpussyquote": "You reach between her legs and massage her pussy through the thin fabric of her skin-tight jeans and panties.",
+      "sextakeofftop": "Take off her t-shirt",
+      "sextakeoffpanties": "Take off her panties",
+      "sextakeoffbra": "take off her bra",
+      "sextBreasttop": "You massage her breasts through her t-shirt.",
+      "sextBreastbra": "You rub her nipples through the silky lace of her bra.",
+      "sextThigh": "You slip your hand between her legs and slide it up her inner thighs, feeling the smooth fabric of her jeans.",
+      "sextAssskirt": "You massage her ass through the thin fabric of her tight jeans.",
+      "sextAsspanties": "You rub her ass though the silky fabric of her panties.",
+      "sextPussy": "You reach between her legs and massage her pussy through the thin fabric of her skin-tight jeans and panties.",
       "sexkissthighquote": "You lay your head in her lap and rub your cheek on her inner thigh through the thin fabric of her tight jeans.",
       "sexkisspussyquote": "You bury your face in her lap in a vain attempt to stretch the fabric of her jeans, but instead you just put pressure on her bladder.",
       "sextoskirtquoteemer": "The bulge of her overfull bladder is stretching out the waistband of her skin-tight jeans and making the zipper difficult to operate.",
@@ -334,12 +339,17 @@
       "finishtogetherdumpquote" : "A huge puddle has formed as she squeezes off the last drops, and you wipe her pussy with your finger before smoothing her panties back into place and tugging her skirt into position.",
       "finishtogetherdumpquotebare" : "A huge puddle has formed as she squeezes off the last drops, and you wipe her pussy with your finger before letting her skirt fall back down.",
       "sextakeoffskirt" : "Take off her skirt",
-      "sextakeoffblouse" : "Take off her blouse",
-      "sextouchthighquote" : "You slip your hand under her skirt and slide it up her inner thighs.",
-      "sextouchassquote" : "You massage her ass through the thin fabric of her skirt.",
-      "sextouchpussyquote" : "You reach under her skirt and massage her pussy through the thin fabric of her panties.",
-      "sexkissthighquote" : "You lay your head in her lap and rub your cheek on her inner thigh through the thin fabric of her skirt.",
-      "sexkisspussyquote" : "You bury your face in her lap in a vain attempt to stretch her skirt, but instead you just put pressure on her bladder.",
+      "sextakeofftop" : "Take off her blouse",
+      "sextakeoffpanties": "Take off her panties",
+      "sextakeoffbra": "take off her bra",
+      "sextBreasttop": "You massage her breasts through the thin fabric of her blouse.",
+      "sextBreastbra": "You rub her nipples through the silky lace of her bra.",
+      "sextThigh" : "You slip your hand under her skirt and slide it up her inner thighs.",
+      "sextAssskirt" : "You massage her ass through the thin fabric of her skirt.",
+      "sextAsspanties": "You rub her ass though the silky fabric of her panties.",
+      "sextPussy" : "You reach under her skirt and massage her pussy through the thin fabric of her panties.",
+      "sexkThigh" : "You lay your head in her lap and rub your cheek on her inner thigh through the thin fabric of her skirt.",
+      "sexkPussy" : "You bury your face in her lap in a vain attempt to stretch her skirt, but instead you just put pressure on her bladder.",
       "sextoskirtquoteemer" : "The bulge of her overfull bladder is stretching out her skirt on top and making the zipper difficult to operate.",
       "sextoskirtquote" : "You unzip and tug down her skirt to reveal her {0} panties beneath.",
       "sextoskirtquotebare" : "You unzip and pull down her skirt like you were unwrapping a present.  Beneath it you find her curly pubes and nothing else.",
