Refactored all sex actions.

--- a/JSON/appearance.JSON
+++ b/JSON/appearance.JSON
@@ -212,8 +212,8 @@
       "sextAssskirt": "You massage her ass through the thin fabric of her tight jeans.",
       "sextAsspanties": "You rub her ass though the silky fabric of her panties.",
       "sextPussy": "You reach between her legs and massage her pussy through the thin fabric of her skin-tight jeans and panties.",
-      "sexkissthighquote": "You lay your head in her lap and rub your cheek on her inner thigh through the thin fabric of her tight jeans.",
-      "sexkisspussyquote": "You bury your face in her lap in a vain attempt to stretch the fabric of her jeans, but instead you just put pressure on her bladder.",
+      "sexkThigh": "You lay your head in her lap and rub your cheek on her inner thigh through the thin fabric of her tight jeans.",
+      "sexkPussy": "You bury your face in her lap in a vain attempt to stretch the fabric of her jeans, but instead you just put pressure on her bladder.",
       "sextoskirtquoteemer": "The bulge of her overfull bladder is stretching out the waistband of her skin-tight jeans and making the zipper difficult to operate.",
       "sextoskirtquote": "You unzip and tug down her skin-tight jeans to reveal her {0} panties beneath.",
       "sextoskirtquotebare": "You unzip and pull down her skin-tight jeans like you were unwrapping a present.  Beneath them you find her curly pubes and nothing else.",
