Refactored all taking off clothes during sex.

--- a/JSON/appearance.JSON
+++ b/JSON/appearance.JSON
@@ -215,9 +215,9 @@
       "sexkThigh": "You lay your head in her lap and rub your cheek on her inner thigh through the thin fabric of her tight jeans.",
       "sexkPussy": "You bury your face in her lap in a vain attempt to stretch the fabric of her jeans, but instead you just put pressure on her bladder.",
       "sextoskirtquoteemer": "The bulge of her overfull bladder is stretching out the waistband of her skin-tight jeans and making the zipper difficult to operate.",
-      "sextoskirtquote": "You unzip and tug down her skin-tight jeans to reveal her {0} panties beneath.",
-      "sextoskirtquotebare": "You unzip and pull down her skin-tight jeans like you were unwrapping a present.  Beneath them you find her curly pubes and nothing else.",
-      "sextopantiesquote": "You reach down the back of her tight jeans and try to tug her panties out, but they seem to be stuck.",
+      "sexskirtpanties": "You unzip and tug down her skin-tight jeans to reveal her {0} panties beneath.",
+      "sexskirtnone": "You unzip and pull down her skin-tight jeans like you were unwrapping a present.  Beneath them you find her curly pubes and nothing else.",
+      "sexpantieskirt": "You reach down the back of her tight jeans and try to tug her panties out, but they seem to be stuck.",
       "swimstripquote":" is already peeling off her t-shirt and jeans.",
       "swimstripquotebare": "She hesitates a second and then removes her lacy bra.  She stands completely naked, but it's difficult to see much in the warm darkness.",
       "swimstripquotepanties": "She hesitates a second and then removes her lacy bra, leaving her {0} panties on."
@@ -350,10 +350,10 @@
       "sextPussy" : "You reach under her skirt and massage her pussy through the thin fabric of her panties.",
       "sexkThigh" : "You lay your head in her lap and rub your cheek on her inner thigh through the thin fabric of her skirt.",
       "sexkPussy" : "You bury your face in her lap in a vain attempt to stretch her skirt, but instead you just put pressure on her bladder.",
-      "sextoskirtquoteemer" : "The bulge of her overfull bladder is stretching out her skirt on top and making the zipper difficult to operate.",
-      "sextoskirtquote" : "You unzip and tug down her skirt to reveal her {0} panties beneath.",
-      "sextoskirtquotebare" : "You unzip and pull down her skirt like you were unwrapping a present.  Beneath it you find her curly pubes and nothing else.",
-      "sextopantiesquote" : "You reach up under her skirt and try to tug her panties down, but they seem to be stuck.",
+      "sexskirtquoteemer" : "The bulge of her overfull bladder is stretching out her skirt on top and making the zipper difficult to operate.",
+      "sexskirtpanties" : "You unzip and tug down her skirt to reveal her {0} panties beneath.",
+      "sexskirtnone" : "You unzip and pull down her skirt like you were unwrapping a present.  Beneath it you find her curly pubes and nothing else.",
+      "sexpantiesskirt" : "You reach up under her skirt and try to tug her panties down, but they seem to be stuck.",
       "swimstripquote" : " is already peeling off her blouse and skirt.",
       "swimstripquotebare" : "She hesitates a second and then removes her lacy bra.  She stands completely naked, but it's difficult to see much in the warm darkness.",
       "swimstripquotepanties" : "She hesitates a second and then removes her lacy bra, leaving her {0} panties on."
