Finished open club, fixed keys

--- a/JSON/appearance.JSON
+++ b/JSON/appearance.JSON
@@ -196,7 +196,7 @@
       "ptogetherquotebare": " yanks down her skin-tight jeans, and is pissing like a racehorse before she even fully sits down on the seat.",
       "ptogetheroutquote": "Her bladder can't be ignored, and she pulls her jeans and panties down around her ankles, quickly sqatting on the ground.",
       "ptogetheroutquotebare": "Her bladder can't be ignored, and she pulls her jeans down to reveal her bare pussy, squatting quickly on the ground.",
-      "finishtogethroutquote": "She gets up and re-adjusts her panties over her still-damp crotch, pulling her tight jeans firmly back into place.",
+      "finishtogetheroutquote": "She gets up and re-adjusts her panties over her still-damp crotch, pulling her tight jeans firmly back into place.",
       "finishtogetheroutquotebare": "She gets up and pulls on her jeans, checking for dampness soaking into the crotch.",
       "ptogetherdumpquote": "You quickly help her pull down her skin-tight jeans and reach between her legs, running your hand up her hot and sweaty thighs to the damp gusset of her {0} panties.",
       "ptogetherdumpquotebare": "You quickly help her pull her skin-tight jeans aside and reach between her legs, running your hand up her hot and sweaty thighs to reach the soft, moist flesh of her cunt.",
